--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/node": "^12.7.3",
     "@types/passport": "^1.0.1",
     "@types/passport-google-oauth20": "^2.0.2",
+    "@types/passport-local": "^1.0.33",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
